src/test/deca/codegen/valid/provided/New.deca
class alpha{
int x;
        void get(){
                int c = 1;
                println(c);
//              return 2;
        }
}
{
        alpha a = new alpha();
//        a.get();
//      println(a.get());
}
