src/test/deca/codegen/invalid/Debug.deca
class Point2D {
int x;
int y;

void diag(int a) {
x = x + a;
y = y + a;
}
}

class Point3D extends Point2D {
int z;

void diag(int a) {
x = x + a;
y = y + a;
z = z + a;
}
}
{
Point2D p1 = new Point2D();
Point3D p3 = new Point3D();
int zz;

p3.diag(2);
 
println("p3.z = ", p3.z);
}
